[package]
name = "optrs"
version = "0.1.0"
authors = ["Tomas Tinoco De Rubira <ttinoco5687@gmail.com>"]
edition = "2018"
license = "BSD-2-Clause"

[dependencies]
num-traits = "0.2.11"
tempfile = "3.1.0"
simple-error = "0.2.1"
approx = "0.3.2"
libc = "0.2.68"
libipopt-sys = { path = "libipopt-sys", version = "0.1.0" }
